[gd_scene load_steps=8 format=3 uid="uid://bdfwwh07g01su"]

[ext_resource type="Script" path="res://Level1.gd" id="1_ajkn7"]
[ext_resource type="Texture2D" uid="uid://c0srko8cpcgiw" path="res://assets/kenney_tower-defense-top-down/Tilesheet/towerDefense_tilesheet.png" id="1_xsple"]
[ext_resource type="PackedScene" uid="uid://dm7x27h2o5aba" path="res://enemy.tscn" id="2_83tds"]
[ext_resource type="PackedScene" uid="uid://bkkwp7iscwd8k" path="res://Turret.tscn" id="3_q0s5x"]
[ext_resource type="PackedScene" uid="uid://cmcm1sbl7mw4h" path="res://enemy_path.tscn" id="3_rg2rv"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3ouv2"]
texture = ExtResource("1_xsple")
texture_region_size = Vector2i(64, 64)
0:3/0 = 0
1:3/0 = 0
2:4/0 = 0
2:5/0 = 0
1:5/0 = 0
0:5/0 = 0
0:4/0 = 0
1:4/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
4:4/0 = 0
3:4/0 = 0
3:1/0 = 0
4:1/0 = 0
4:0/0 = 0
3:0/0 = 0
0:2/0 = 0
0:0/0 = 0
1:0/0 = 0
1:1/0 = 0
2:1/0 = 0
2:2/0 = 0
2:0/0 = 0
0:1/0 = 0
1:2/0 = 0
4:2/0 = 0
4:5/0 = 0
4:6/0 = 0
4:7/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:9/0 = 0
9:9/0 = 0
10:10/0 = 0
11:10/0 = 0
9:10/0 = 0
8:10/0 = 0
7:10/0 = 0
6:10/0 = 0
5:10/0 = 0
4:10/0 = 0
3:10/0 = 0
2:10/0 = 0
1:9/0 = 0
0:8/0 = 0
0:7/0 = 0
0:6/0 = 0
1:7/0 = 0
1:6/0 = 0
1:8/0 = 0
2:7/0 = 0
2:6/0 = 0
3:6/0 = 0
2:8/0 = 0
2:9/0 = 0
3:7/0 = 0
3:8/0 = 0
2:11/0 = 0
1:11/0 = 0
1:10/0 = 0
5:6/0 = 0
5:5/0 = 0
6:5/0 = 0
5:4/0 = 0
3:5/0 = 0
5:3/0 = 0
5:2/0 = 0
6:4/0 = 0
7:4/0 = 0
7:5/0 = 0
7:3/0 = 0
8:3/0 = 0
6:3/0 = 0
6:2/0 = 0
3:9/0 = 0
4:9/0 = 0
5:7/0 = 0
6:6/0 = 0
6:7/0 = 0
7:6/0 = 0
8:6/0 = 0
8:5/0 = 0
9:5/0 = 0
9:6/0 = 0
8:7/0 = 0
6:9/0 = 0
5:11/0 = 0
7:7/0 = 0
8:4/0 = 0
11:4/0 = 0
10:4/0 = 0
10:5/0 = 0
10:6/0 = 0
12:3/0 = 0
12:2/0 = 0
13:1/0 = 0
13:2/0 = 0
13:3/0 = 0
13:4/0 = 0
12:5/0 = 0
12:6/0 = 0
12:7/0 = 0
13:5/0 = 0
14:4/0 = 0
14:3/0 = 0
15:2/0 = 0
15:1/0 = 0
11:6/0 = 0
11:7/0 = 0
12:4/0 = 0
14:2/0 = 0
10:7/0 = 0
15:3/0 = 0
14:5/0 = 0
13:6/0 = 0
14:6/0 = 0
15:5/0 = 0
16:5/0 = 0
16:6/0 = 0
15:6/0 = 0
15:7/0 = 0
14:8/0 = 0
17:5/0 = 0
17:4/0 = 0
13:7/0 = 0
11:5/0 = 0
11:3/0 = 0
11:2/0 = 0
11:1/0 = 0
11:0/0 = 0
12:0/0 = 0
10:3/0 = 0
9:4/0 = 0
9:3/0 = 0
10:2/0 = 0
10:1/0 = 0
3:2/0 = 0
7:2/0 = 0
6:1/0 = 0
5:1/0 = 0
5:0/0 = 0
6:0/0 = 0
7:1/0 = 0
7:0/0 = 0
8:0/0 = 0
8:1/0 = 0
8:2/0 = 0
9:1/0 = 0
9:0/0 = 0
9:2/0 = 0
14:7/0 = 0
13:8/0 = 0
12:8/0 = 0
0:9/0 = 0
0:10/0 = 0
0:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
3:11/0 = 0
4:11/0 = 0
5:9/0 = 0
7:9/0 = 0
6:11/0 = 0
7:11/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
11:12/0 = 0
12:10/0 = 0
12:9/0 = 0
11:9/0 = 0
10:9/0 = 0
13:10/0 = 0
13:11/0 = 0
12:11/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
14:11/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
16:11/0 = 0
15:11/0 = 0
17:11/0 = 0
18:11/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
20:11/0 = 0
19:11/0 = 0
17:10/0 = 0
16:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
21:12/0 = 0
22:12/0 = 0
22:11/0 = 0
21:9/0 = 0
22:9/0 = 0
20:9/0 = 0
19:9/0 = 0
19:8/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
22:8/0 = 0
21:8/0 = 0
20:8/0 = 0
19:6/0 = 0
20:6/0 = 0
22:6/0 = 0
22:5/0 = 0
21:5/0 = 0
20:5/0 = 0
19:5/0 = 0
18:5/0 = 0
15:8/0 = 0
16:8/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
18:8/0 = 0
18:7/0 = 0
17:7/0 = 0
17:8/0 = 0
17:6/0 = 0
16:7/0 = 0
15:4/0 = 0
16:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
11:8/0 = 0
9:8/0 = 0
9:7/0 = 0
10:8/0 = 0
8:8/0 = 0
13:9/0 = 0
14:9/0 = 0
14:10/0 = 0
10:0/0 = 0
12:1/0 = 0
13:0/0 = 0
14:0/0 = 0
14:1/0 = 0

[sub_resource type="TileSet" id="TileSet_palek"]
tile_size = Vector2i(64, 64)
sources/1 = SubResource("TileSetAtlasSource_3ouv2")

[node name="Level1" type="Node2D"]
script = ExtResource("1_ajkn7")
ENEMY = ExtResource("2_83tds")
ENEMY_PATH = ExtResource("3_rg2rv")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_palek")
format = 2
layer_0/tile_data = PackedInt32Array(131072, 65537, 3, 131073, 65537, 3, 131074, 65537, 3, 131075, 65537, 3, 131076, 65537, 3, 131077, 65537, 3, 131078, 65537, 3, 196608, 65537, 4, 196609, 65537, 4, 196610, 65537, 4, 196611, 65537, 4, 262144, 65537, 5, 262145, 65537, 5, 262146, 65537, 5, 262147, 65537, 5, 262148, 65537, 5, 196612, 65537, 4, 196613, 65537, 4, 196614, 65537, 4, 262150, 262145, 3, 327686, 1, 4, 393222, 1, 4, 458758, 1, 4, 458759, 65537, 4, 458760, 196609, 4, 458761, 65537, 3, 458762, 65537, 3, 458763, 65537, 3, 524295, 65537, 4, 524296, 65537, 4, 524297, 65537, 4, 524298, 65537, 4, 524299, 65537, 4, 524300, 65537, 4, 524301, 65537, 4, 524302, 65537, 4, 524303, 65537, 4, 524304, 458753, 10, 458764, 65537, 3, 458765, 65537, 3, 458766, 65537, 3, 458767, 65537, 3, 458768, 458753, 9, 589840, 458753, 11, 589839, 65537, 5, 589838, 65537, 5, 589837, 65537, 5, 589836, 65537, 5, 589835, 65537, 5, 589834, 65537, 5, 589833, 65537, 5, 589832, 65537, 5, 589831, 65537, 5, 589830, 1, 5, 196615, 65537, 4, 131079, 65537, 3, 262149, 65537, 5, 131080, 131073, 3, 196616, 131073, 4, 262151, 65537, 4, 327687, 65537, 4, 393223, 65537, 4, 262152, 131073, 4, 327688, 131073, 4, 393224, 131073, 4, 524294, 1, 4, 393218, 262145, 5, 327682, 262145, 5, 327681, 262145, 5, 327680, 262145, 5, 393216, 262145, 5, 458752, 262145, 5, 524288, 262145, 5, 589824, 262145, 5, 589825, 262145, 5, 524289, 262145, 5, 458753, 262145, 5, 393217, 262145, 5, 458754, 262145, 5, 524290, 262145, 5, 589826, 262145, 5, 589827, 262145, 5, 524291, 262145, 5, 458755, 262145, 5, 393219, 262145, 5, 327683, 262145, 5, 327684, 262145, 5, 393220, 262145, 5, 458756, 262145, 5, 524292, 262145, 5, 589828, 262145, 5, 589829, 262145, 5, 524293, 262145, 5, 458757, 262145, 5, 393221, 262145, 5, 327685, 262145, 5, 262154, 262145, 5, 196618, 262145, 5, 131082, 262145, 5, 131081, 262145, 5, 196617, 262145, 5, 262153, 262145, 5, 327689, 262145, 5, 393225, 262145, 5, 393226, 262145, 5, 327690, 262145, 5, 327691, 262145, 5, 262155, 262145, 5, 196619, 262145, 5, 131083, 262145, 5, 131084, 262145, 5, 196620, 262145, 5, 262156, 262145, 5, 327692, 262145, 5, 393228, 262145, 5, 393227, 262145, 5, 393229, 262145, 5, 327693, 262145, 5, 262157, 262145, 5, 196621, 262145, 5, 131085, 262145, 5, 131086, 262145, 5, 196622, 262145, 5, 262158, 262145, 5, 327694, 262145, 5, 393230, 262145, 5, 393231, 262145, 5, 327695, 262145, 5, 262159, 262145, 5, 196623, 262145, 5, 131087, 262145, 5, 131088, 262145, 5, 196624, 262145, 5, 262160, 262145, 5, 327696, 262145, 5, 393232, 262145, 5, 0, 262145, 5, 1, 262145, 5, 2, 262145, 5, 3, 262145, 5, 4, 262145, 5, 5, 262145, 5, 6, 262145, 5, 65539, 262145, 5, 65538, 262145, 5, 65537, 262145, 5, 65536, 262145, 5, 65540, 262145, 5, 7, 262145, 5, 8, 262145, 5, 65544, 262145, 5, 65543, 262145, 5, 65542, 262145, 5, 65541, 262145, 5, 65545, 262145, 5, 65546, 262145, 5, 65547, 262145, 5, 65548, 262145, 5, 9, 262145, 5, 10, 262145, 5, 11, 262145, 5, 12, 262145, 5, 13, 262145, 5, 14, 262145, 5, 65550, 262145, 5, 65549, 262145, 5, 15, 262145, 5, 65551, 262145, 5, 65552, 262145, 5, 16, 262145, 5)

[node name="Turret" parent="." instance=ExtResource("3_q0s5x")]
position = Vector2(371, 327)

[node name="ReloadTimerLabel" type="Label" parent="."]
offset_left = 650.0
offset_top = 53.0
offset_right = 758.0
offset_bottom = 134.0
theme_override_colors/font_color = Color(0.993372, 0.993372, 0.993372, 1)
text = "Reload Timer"

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="EnemyTimerLabel" type="Label" parent="EnemyTimer"]
offset_left = 869.0
offset_top = 51.0
offset_right = 970.0
offset_bottom = 117.0
text = "Enemy Spawn Timer"

[node name="Turret2" parent="." instance=ExtResource("3_q0s5x")]
position = Vector2(605, 434)

[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
